# GEM-hackathon-backend

./: .gitignore  MOBILE_FIX_REQUIRED.md  MOBILE_IMPLEMENTATION_PROMPT.md  MOBILE_QUICK_START.md  NFC_FLOW_GUIDE.md  README.md  database.py  image_test.py  ingest.py  main.py  migrate_db.py  museum_system.db  pyproject.toml  rag_system.py
chroma_db/: chroma.sqlite3
