[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uuid>=1.30",
]
