[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi>=0.124.0",
    "langchain>=1.1.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "pypdf>=6.4.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "sqlmodel>=0.0.27",
    "unstructured[pdf]>=0.18.21",
    "uuid>=1.30",
]
